# a510_mcu

./: .gitignore  CMakeLists.txt  a510_mcu.resc  bootflow.md  build_all.sh  merge.py
app/app/: a510_mcu.resc  app.cmake  build.sh  stm32f410rbtx_flash.ld
app/app/cubemx/: .mxproject  Makefile  app.ioc  stm32f410r8tx_flash.ld
app/app/cubemx/Core/Src/: main.c
app/app/src/: main.c  startup_stm32f410rx.s
app/bootloader/: a510_mcu.resc  app.cmake  build.sh  stm32f410rbtx_flash.ld
app/bootloader/cubemx/: .mxproject  Makefile  bootloader.ioc  stm32f410r8tx_flash.ld
app/bootloader/cubemx/Core/Src/: FLASH_SECTOR_F4.c  main.c
app/bootloader/src/: main.c  startup_stm32f410rx.s
